@@ -1,6 +1,7 @@
 2.9.5
  - fix: polygon translation via drag-n-drop in polygon edit mode
    was not taken into account (#115)
+ - enh: add (de-)select all button for lists in ComputeStatistics (#116)
  - setup: bump dclab from 0.39.13 to 0.39.15
 2.9.4
  - enh: display session file name in window title
